Added vue ledgers implementation

--- a/src/main/bvmui/src/styles/main.scss
+++ b/src/main/bvmui/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "view";
 
 @import "components/spinner";
+@import "components/error";
 @import "components/navbar";
 @import "components/title";
 @import "components/card";
