--- a/src/main/bvmui/src/styles/main.scss
+++ b/src/main/bvmui/src/styles/main.scss
@@ -7,4 +7,6 @@
 @import "components/navbar";
 @import "components/title";
 @import "components/card";
+@import "components/tile";
+@import "components/metadata";
 
