--- a/src/main/bvmui/src/styles/_view.scss
+++ b/src/main/bvmui/src/styles/_view.scss
@@ -1,7 +1,9 @@
 .bvm-page-container {
-    padding: 0 30px
+    padding: 20px 30px;
+    margin-top: 50px;
 }
 
-.bvm-error {
-    
+.bvm-ledger {
+    display: flex;
+    flex-flow: row;
 }
