--- a/src/main/bvmui/src/styles/components/_card.scss
+++ b/src/main/bvmui/src/styles/components/_card.scss
@@ -12,18 +12,20 @@
 }
 
 .bvm-card {
-    width: 300px;
+    flex: 1 0 30%;
     height: 200px;
     border-radius: 2px;
-    background-color: color('primary');
+
+    color: #FFFFFF;
+    background-color: color("primary");
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
     &:hover {
-        background-color: lighten(color('primary'), 3);
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        background-color: lighten(color("primary"), 3);
 
         cursor: pointer;
-        transition: .15s;
+        transition: 0.15s;
     }
 
     display: flex;
