--- a/src/main/bvmui/src/styles/components/_tile.scss
+++ b/src/main/bvmui/src/styles/components/_tile.scss
@@ -21,6 +21,8 @@
     width: 150px;
     height: 50px;
     border-radius: 2px;
+
+    color: #FFFFFF;
     background-color: color('primary');
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
