Create a first awesome UI using Vuetify #46

--- a/src/main/bvmui/src/styles/_variables.scss
+++ b/src/main/bvmui/src/styles/_variables.scss
@@ -7,4 +7,4 @@ $colors: (
     @return map-get($colors, $key);
 }
 
-$primary-font: "Helvetica Neue", "Arial", sans-serif;
+$primary-font: "Roboto", "Arial", sans-serif;
