--- a/web/src/main/bvmui/src/styles/components/_metadata.scss
+++ b/web/src/main/bvmui/src/styles/components/_metadata.scss
@@ -1,8 +1,8 @@
-.bvm-metadata-container {
-    position: relative;
-
+.bvm-metadata {
     padding: 15px 20px;
     border: 1px solid #eeeeee;
+    background-color: white;
+    z-index: 1;
 
     h2 {
         font-size: 18px;
@@ -11,20 +11,19 @@
 
     .bvm-metadata-close {
         position: absolute;
-        top: 20px;
-        right: 20px;
+        top: 18px;
+        right: 18px;
 
-        font-size: 18px;
+        font-size: 24px;
 
         background-color: Transparent;
-        background-repeat:no-repeat;
+        background-repeat: no-repeat;
         border: none;
-        cursor:pointer;
+        cursor: pointer;
     }
 }
 
 .bvm-metadata-row {
     padding: 15px 0;
-   border-top: 1px solid #eeeeee; 
-
+    border-top: 1px solid #eeeeee;
 }
