Enhance Ledgers View: - describe ledgers using metadata - change background color - show number of ledgers and total size - update the seach results by pressing ENTER on any of the fields - Move Reload cache button to the first tab in SystemStatus view

--- a/web/src/main/bvmui/src/styles/components/_tile.scss
+++ b/web/src/main/bvmui/src/styles/components/_tile.scss
@@ -1,8 +1,8 @@
 .bvm-tile {
-    min-width: 150px;
-    max-width: 150px;
+    min-width: 300px;
+    max-width: 300px;
 
-    height: 100px;
+    height: 150px;
     border-radius: 4px;
 
     color: #ffffff;
@@ -16,4 +16,8 @@
         cursor: pointer;
         transition: 0.15s;
     }
+}
+.bvm-tile__descrow {    
+    color: #1b4400;
+    font-size: large;
 }
