--- a/web/src/main/bvmui/src/styles/components/_tile.scss
+++ b/web/src/main/bvmui/src/styles/components/_tile.scss
@@ -5,7 +5,7 @@
     height: 150px;
     border-radius: 4px;
 
-    color: #ffffff;
+    color: #000000;
     background-color: color("primary");
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
@@ -18,6 +18,5 @@
     }
 }
 .bvm-tile__descrow {    
-    color: #1b4400;
     font-size: large;
 }
