Enhance Ledgers View (#99)
* Enhance Ledgers View:
- describe ledgers using metadata
- change background color
- show number of ledgers and total size
- update the seach results by pressing ENTER on any of the fields
- Move Reload cache button to the first tab in SystemStatus view

* drop useless CSS

* fix checkstyle

* address Alessandro's comments

Co-authored-by: Enrico Olivelli <enrico.olivelli@diennea.com>

--- a/web/src/main/bvmui/src/styles/components/_tile.scss
+++ b/web/src/main/bvmui/src/styles/components/_tile.scss
@@ -1,11 +1,11 @@
 .bvm-tile {
-    min-width: 150px;
-    max-width: 150px;
+    min-width: 300px;
+    max-width: 300px;
 
-    height: 100px;
+    height: 150px;
     border-radius: 4px;
 
-    color: #ffffff;
+    color: #000000;
     background-color: color("primary");
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
@@ -16,4 +16,7 @@
         cursor: pointer;
         transition: 0.15s;
     }
+}
+.bvm-tile__descrow {    
+    font-size: large;
 }
