--- a/web/src/main/bvmui/src/styles/_view.scss
+++ b/web/src/main/bvmui/src/styles/_view.scss
@@ -1,6 +1,6 @@
 .bvm-ledger-search {
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .bvm-ledger {
@@ -14,22 +14,18 @@
         flex-shrink: 0;
 
         width: 600px;
-        height: 600px;
+        height: 100%;
+        padding-left: 10px;
 
         overflow: auto;
     }
 
     .bvm-tile-container {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-auto-rows: minmax(min-content, max-content);
 
-        flex-grow: 1;
-        margin: 0 -5px;
-
-        .bvm-tile {
-            padding: 5px 15px;
-            margin: 0 5px;
-            margin-bottom: 5px;
-        }
+        column-gap: 5px;
+        row-gap: 5px;
     }
 }
