--- a/web/src/main/bvmui/src/styles/components/_metadata.scss
+++ b/web/src/main/bvmui/src/styles/components/_metadata.scss
@@ -20,6 +20,10 @@
         background-repeat: no-repeat;
         border: none;
         cursor: pointer;
+
+        h2 {
+            word-break: break-all;
+        }
     }
 }
 
