--- a/web/src/main/bvmui/src/styles/_view.scss
+++ b/web/src/main/bvmui/src/styles/_view.scss
@@ -21,6 +21,7 @@
     }
 
     .bvm-tile-container {
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         grid-auto-rows: minmax(min-content, max-content);
