[misc] UI improvements

--- a/web/src/main/bvmui/src/styles/_globals.scss
+++ b/web/src/main/bvmui/src/styles/_globals.scss
@@ -149,3 +149,14 @@ ol {
     local('Roboto-Blackitalic'),
     url('./fonts/Roboto-BlackItalic.ttf') format('truetype');
 }
+.v-chip {
+  height: auto !important;
+  margin: 4px;
+}
+
+.v-chip .v-chip__content {
+  max-width: 100%;
+  height: auto;
+  min-height: 32px;
+  white-space: pre-wrap;
+}
